[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/popup/popup_window.gd" type="Script" id=1]

[node name="Control" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.74902
margin_top = 5.92249
margin_right = 2.74902
margin_bottom = 5.92249
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 320.0
margin_top = 146.0
margin_right = 800.0
margin_bottom = 502.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonOK" type="Button" parent="."]
margin_left = 508.0
margin_top = 446.0
margin_right = 612.0
margin_bottom = 490.0
text = "OK"

[node name="buttonYES" type="Button" parent="."]
margin_left = 340.0
margin_top = 444.0
margin_right = 437.0
margin_bottom = 492.0
rect_pivot_offset = Vector2( 97, 48 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonNO" type="Button" parent="."]
margin_left = 682.0
margin_top = 444.0
margin_right = 779.0
margin_bottom = 492.0
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageLabel" type="RichTextLabel" parent="."]
anchor_right = 0.5
anchor_bottom = 0.056
margin_left = 338.0
margin_top = 254.0
margin_right = 138.0
margin_bottom = 299.68
text = "\"default\""
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
